# zephyr

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.rst
.theia/: settings.json  tasks.json
drivers/ethernet/: eth.h
drivers/gpio/: gpio_shell.c
lib/libc/minimal/source/stdlib/: malloc.c
samples/net/sockets/myhttpserver/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/net/sockets/myhttpserver/htm/: .gitignore  buttons.htm  htm2c.sh  index.htm  inputs.htm  live_log.htm  switches.htm  webshell.htm
samples/net/sockets/myhttpserver/src/: cJSON.c  external_log_access.inl  libc_extensions.c  log_backend_rb.c  log_backend_rb.h  main.c  my_log_backend.c  my_log_backend.h  mygpio.c  mygpio.h  mysettings.c  mysettings.h  web_shell.c  web_shell.h  websocket.c  websocket.h
subsys/logging/: log_output.c
subsys/net/lib/config/: init.c
